# core-cs-algorithms

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
calgo/: __init__.py  calgo.py  cli.py  graph.py
tests/: test_calgo.py  test_graph.py
